# Fast-API-Project

./: .coverage  .gitignore  README.md  conftest.py  main.py  pyproject.toml
.github/workflows/: ci-cd.yaml
tests/: README.md  test.py
tests_generated/: README.md  generated_test.py  generator.py
tests_selecter/: README.md  comparison_report.py  selecter.py
